configuring cli app